--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /MVCExampleProjekt/Other/DatabaseVariables.cs
+/MVCExampleProjekt/Other/Annotations.txt
