--- a/MVCExampleProjekt/MVCExampleProjekt.csproj
+++ b/MVCExampleProjekt/MVCExampleProjekt.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
+    <PackageReference Include="MySql.Data" Version="8.0.31" />
   </ItemGroup>
 
 </Project>
